added responsive navbar, removed non-responsive original design for about me section, updated css to reflect responsive navbar

--- a/index.html
+++ b/index.html
@@ -27,24 +27,26 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="hwrapper">
-            <h1 class="myname">Tyler Ford</h1>
-            <div class="mynav">
-                <ul class="nav justify-content-end">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">About</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
+                <a class="navbar-brand" href="index.html"><h1>Tyler Ford</h1></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="index.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                      <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                      <a class="nav-link" href="contact.html">Contact</a>
                     </li>
-                </ul>
-            </div>
-        </div>
-    </div>
+                  </ul>
+                </div>
+              </nav>
     <!-- about me section -->
     <div class="container-fluid">
         <div class="row">
@@ -81,34 +83,6 @@
                 
             </div>
         </div>
-        <!-- non-responsive -->
-        <!-- <div class="awrapper">
-            <div class="about-container">
-                <h2>About Me</h2>
-                <hr>
-                <img src="assets/tyler-small.jpg" class="img-fluid imgt" alt="Responsive image">
-                <p>I am a front-end web developer, writer, and videographer, currently serving as the communications
-                    manager for ‘the J’. I’m also studying to be a full-stack developer, and while you’re probably
-                    thinking, “cool story, nerd!” I will put up a fight if you try to take my lunch money. I am fueled
-                    by granola bars and la croix, and I have a crippling weakness for fried foods, smoked meats, regular
-                    meats, bacon, smoked bacon, crispy bacon, the mere mention of bacon, fried foods served in concert
-                    with smoked meats and/or bacon, and bacon. </p>
-                <p>My sister and I were born in Gilroy, California, and having been there recently and noted the amazing
-                    growth, I wonder when they’ll start to refer to it as San Jose Heights. My dad was a commercial
-                    pilot, and despite the fact that he attended college on a football scholarship, he is basically a
-                    nerd in jock’s clothing. My mom was a professional ballet dancer, then teacher, then stayed home to
-                    raise some smelly kids, and dna tests have shown her to be primarily a nerd but also a hippie. My
-                    sister told on me a lot(twice), but she is now an amazing mother of 5 children that laughs just
-                    about always and lives on dr. pepper and dad jokes(like a nerd). I guess my point is that the
-                    (nerd)apple can’t fall far from the (nerd)tree if it’s surrounded on all sides by apple trees(and
-                    nerds). So to speak. I apologize if I just lost you.</p>
-                <p>A little bit about me, I have two very cute and very loud children, a beautiful wife who is also my
-                    best friend in the world, and sometimes feel like I can’t fathom why I would deserve any of these
-                    things unless in some past life I was a bird that flew into the path of a bullet that would’ve
-                    otherwise killed elton john. Pre-yellow brick road, obviously.</p>
-
-            </div>
-        </div> -->
 
         <div class="footer">
             <p>Copyright © 2019 Tyler Ford</p>
