--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                     <li class="nav-item">
                       <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                       <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                   </ul>
