--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
               
                 <div class="collapse navbar-collapse mynav" id="navbarTogglerDemo02">
                   <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                       <a class="nav-link" href="index.html">About</a>
                     </li>
                     <li class="nav-item">
