--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
 <body>
     <!-- Nav -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-                <a class="navbar-brand" href="index.html"><h1>Tyler Ford</h1></a>
+                <a class="navbar-brand" href="index.html"><p class="my-name">Tyler Ford</p></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
