attempting xs screen size for main content element

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <!-- about me section -->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-1"></div>
-            <div class="col-10">
+            <div class="col-md-1"></div>
+            <div class="col-xs-12 col-md-10">
                     <div class="page-wrapper">
                             <div class="content">
                                 <h2 class="pgtitle">About Me</h2>
@@ -80,7 +80,7 @@
                 
                             </div>
                         </div>
-            </div><div class="col-1">
+            </div><div class="col-md-1">
                 
             </div>
         </div>
