--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-1"></div>
-            <div class="col-10">
+            <div class="col-xs-12 col-10">
                     <div class="page-wrapper">
                             <div class="content">
                                 <h2 class="pgtitle">Contact Me</h2>
