added portfolio items, updated portfolio and port-title styling

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,8 +57,12 @@
                             <div class="content">
                                 <h2 class="pgtitle">Portfolio</h2>
                                 <hr>
-                                
-                
+                                <div class="pwrap">
+                                <div class="portbox pb1"><div class="pbtitle">design</div></div>
+                                <div class="portbox pb2"><div class="pbtitle">drumkit</div></div>
+                                <div class="portbox pb3"><div class="pbtitle">dice-game</div></div>
+                                <div class="portbox pb4"><div class="pbtitle">John?</div></div>
+                                </div>    
                             </div>
                         </div>
             </div><div class="col-1">
