--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                 <div class="collapse navbar-collapse mynav" id="navbarTogglerDemo02">
                   <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                      <a class="nav-link" href="index.html">About</a>
+                      <a class="nav-link text-primary" href="index.html"><div class="atext">About</div></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="portfolio.html">Portfolio</a>
+                      <a class="nav-link text-primary" href="portfolio.html"><div class="atext">Portfolio</div></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="contact.html">Contact</a>
+                      <a class="nav-link text-primary" href="contact.html"><div class="atext">Contact</div></a>
                     </li>
                   </ul>
                 </div>
