added links for portfolio items

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,10 +58,10 @@
                                 <h2 class="pgtitle">Portfolio</h2>
                                 <hr>
                                 <div class="pwrap">
-                                <div class="portbox pb1"><div class="pbtitle">design</div></div>
-                                <div class="portbox pb2"><div class="pbtitle">drumkit</div></div>
-                                <div class="portbox pb3"><div class="pbtitle">dice-game</div></div>
-                                <div class="portbox pb4"><div class="pbtitle">John?</div></div>
+                                <a href="https://tylermorrisford.github.io/startup-tindog/" target="_blank"><div class="portbox pb1"><div class="pbtitle">design</div></div></a>
+                                <a href="https://tylermorrisford.github.io/drumkit/" target="_blank"><div class="portbox pb2"><div class="pbtitle">drumkit</div></div></a>
+                                <a href="https://tylermorrisford.github.io/dice-game/" target="_blank"><div class="portbox pb3"><div class="pbtitle">dice-game</div></div></a>
+                                <a href="https://tylermorrisford.github.io/john/" target="_blank"><div class="portbox pb4"><div class="pbtitle">John?</div></div></a>
                                 </div>    
                             </div>
                         </div>
