--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </button>
               
                 <div class="collapse navbar-collapse mynav" id="navbarTogglerDemo02">
-                  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                  <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
                       <a class="nav-link text-primary" href="index.html"><div class="atext">About</div></a>
                     </li>
