deleted .text-primary and added #atext to style the navbar links the proper color

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,13 +37,13 @@
                 <div class="collapse navbar-collapse mynav" id="navbarTogglerDemo02">
                   <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link text-primary" href="index.html">About</a>
+                      <a class="nav-link" id="atext" href="index.html">About</a>
                     </li>
                     <li class="nav-item active">
-                      <a class="nav-link text-primary" href="portfolio.html">Portfolio</a>
+                      <a class="nav-link" id="atext" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-primary" href="contact.html">Contact</a>
+                      <a class="nav-link" id="atext" href="contact.html">Contact</a>
                     </li>
                   </ul>
                 </div>
