fixed .plink text coloring, added border animation for .imgt

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             (nerd)apple can’t fall far from the (nerd)tree if it’s surrounded on all sides by apple
                             trees(and
                             nerds). I'll assume that metaphor was a bridge-too-far for many of you. I apologize.</p>
-                        <p>A little bit about me, I have two very cute and very loud children, a beautiful wife who is
+                        <p class="p-end">A little bit about me, I have two very cute and very loud children, a beautiful wife who is
                             also my
                             best friend in the world, and sometimes feel like I can’t fathom why I would deserve any of
                             these
