--- a/portfolio.html
+++ b/portfolio.html
@@ -58,11 +58,35 @@
                                 <h2 class="pgtitle">Portfolio</h2>
                                 <hr>
                                 <div class="pwrap">
-                                <a href="https://tylermorrisford.github.io/startup-tindog/" target="_blank"><div class="portbox pb1"><div class="pbtitle">design</div></div></a>
+                                <!-- <a href="https://tylermorrisford.github.io/startup-tindog/" target="_blank"><div class="portbox pb1"><div class="pbtitle">design</div></div></a>
                                 <a href="https://tylermorrisford.github.io/drumkit/" target="_blank"><div class="portbox pb2"><div class="pbtitle">drumkit</div></div></a>
                                 <a href="https://tylermorrisford.github.io/dice-game/" target="_blank"><div class="portbox pb3"><div class="pbtitle">dice-game</div></div></a>
-                                <a href="https://tylermorrisford.github.io/john/" target="_blank"><div class="portbox pb4"><div class="pbtitle">John?</div></div></a>
-                                </div>    
+                                <a href="https://tylermorrisford.github.io/john/" target="_blank"><div class="portbox pb4"><div class="pbtitle">John?</div></div></a> -->
+                                <div class="card portbox" style="width: 200px;">
+                                  <img src="assets/ipad-startup.jpg" class="card-img-top" alt="...">
+                                  <div class="card-body">
+                                    <p class="pbtitle">Design</p>
+                                  </div>
+                                </div>
+                                <div class="card portbox" style="width: 200px;">
+                                  <img src="assets/drums.png" class="card-img-top" alt="...">
+                                  <div class="card-body">
+                                    <p class="pbtitle">Drum Kit</p>
+                                  </div>
+                                </div>
+                                <div class="card portbox" style="width: 200px;">
+                                  <img src="assets/dice.png" class="card-img-top" alt="...">
+                                  <div class="card-body">
+                                    <p class="pbtitle">Dice Game</p>
+                                  </div>
+                                </div>
+                                <div class="card portbox" style="width: 200px;">
+                                  <img src="assets/john.png" class="card-img-top" alt="...">
+                                  <div class="card-body">
+                                    <p class="pbtitle">John?</p>
+                                  </div>
+                                </div>  
+                              </div>    
                             </div>
                         </div>
             </div><div class="col-1">
