linking projects on portfolio page and adding word-guess

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,30 +58,36 @@
                                 <h2 class="pgtitle">Portfolio</h2>
                                 <hr>
                                 <div class="pwrap">
-                                <div class="card portbox" style="width: 200px;">
+                                <a href="https://tylermorrisford.github.io/startup-tindog/" target="_blank"><div class="card portbox" style="width: 200px;">
                                   <img src="assets/ipad-startup.jpg" class="card-img-top" alt="...">
                                   <div class="card-body">
                                     <p class="pbtitle">Design</p>
                                   </div>
-                                </div>
-                                <div class="card portbox" style="width: 200px;">
+                                </div></a>
+                                <a href="https://tylermorrisford.github.io/drumkit/" target="_blank"><div class="card portbox" style="width: 200px;">
                                   <img src="assets/drums.png" class="card-img-top" alt="...">
                                   <div class="card-body">
                                     <p class="pbtitle">Drum Kit</p>
                                   </div>
-                                </div>
-                                <div class="card portbox" style="width: 207px;">
+                                </div></a>
+                                <a href="https://tylermorrisford.github.io/dice-game/" target="_blank"><div class="card portbox" style="width: 207px;">
                                   <img src="assets/dice.png" class="card-img-top" alt="...">
                                   <div class="card-body">
                                     <p class="pbtitle">Dice</p>
                                   </div>
-                                </div>
-                                <div class="card portbox" style="width: 200px;">
+                                </div></a>
+                                <a href="https://tylermorrisford.github.io/word-guess/" target="_blank"><div class="card portbox" style="width: 200px;">
+                                  <img src="assets/deathstar.png" class="card-img-top" alt="...">
+                                  <div class="card-body">
+                                    <p class="pbtitle">Hangman</p>
+                                  </div>
+                                </div></a>
+                                <a href="https://tylermorrisford.github.io/john/" target="_blank"><div class="card portbox" style="width: 200px;">
                                   <img src="assets/john.png" class="card-img-top" alt="...">
                                   <div class="card-body">
                                     <p class="pbtitle">John?</p>
                                   </div>
-                                </div>  
+                                </div></a> 
                               </div>    
                             </div>
                         </div>
