added link to trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -87,10 +87,10 @@
                                     <p class="pbtitle">Crystals</p>
                                   </div>
                                 </div></a>
-                                <a href="https://tylermorrisford.github.io/john/" target="_blank"><div class="card portbox" style="width: 200px;">
-                                  <img src="assets/john.png" class="card-img-top" alt="...">
+                                <a href="https://tylermorrisford.github.io/TriviaGame/" target="_blank"><div class="card portbox" style="width: 200px;">
+                                  <img src="assets/question.png" class="card-img-top" alt="...">
                                   <div class="card-body">
-                                    <p class="pbtitle">John?</p>
+                                    <p class="pbtitle">Trivia</p>
                                   </div>
                                 </div></a> 
                               </div>    
