updated portfolio with trivia game link

--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
                                   </div>
                                 </div></a>
                                 <a href="https://tylermorrisford.github.io/TriviaGame/" target="_blank"><div class="card portbox" style="width: 200px;">
-                                  <img src="assets/question.png" class="card-img-top" alt="...">
+                                  <img src="assets/question.png" class="card-img-top" alt="trivia game">
                                   <div class="card-body">
                                     <p class="pbtitle">Trivia</p>
                                   </div>
