--- a/portfolio.html
+++ b/portfolio.html
@@ -93,6 +93,18 @@
                                     <p class="pbtitle">Trivia</p>
                                   </div>
                                 </div></a> 
+                                <a href="https://tylermorrisford.github.io/giftastic/" target="_blank"><div class="card portbox" style="width: 200px;">
+                                  <img src="https://media.giphy.com/media/YJBNjrvG5Ctmo/giphy.gif" class="card-img-top" alt="#FailSearch">
+                                  <div class="card-body">
+                                    <p class="pbtitle">FailGifs</p>
+                                  </div>
+                                </div></a> 
+                                <a href="#" target="_blank"><div class="card portbox" style="width: 200px;">
+                                  <img src="assets/question.png" class="card-img-top" alt="trivia game">
+                                  <div class="card-body">
+                                    <p class="pbtitle">Train Scheduler</p>
+                                  </div>
+                                </div></a> 
                               </div>    
                             </div>
                         </div>
