--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
                                 <a href="#" target="_blank"><div class="card portbox" style="width: 200px;">
                                   <img src="assets/question.png" class="card-img-top" alt="trivia game">
                                   <div class="card-body">
-                                    <p class="pbtitle">Scheduler</p>
+                                    <p class="pbtitle">Schedule</p>
                                   </div>
                                 </div></a> 
                               </div>    
