adding train scheduler link

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,8 +99,8 @@
                                     <p class="pbtitle">FailGifs</p>
                                   </div>
                                 </div></a> 
-                                <a href="#" target="_blank"><div class="card portbox" style="width: 200px;">
-                                  <img src="assets/question.png" class="card-img-top" alt="trivia game">
+                                <a href="https://tylermorrisford.github.io/train-scheduler/" target="_blank"><div class="card portbox" style="width: 200px;">
+                                  <img src="https://media.giphy.com/media/13sc1Erq6rAoQU/giphy.gif" class="card-img-top" alt="trivia game">
                                   <div class="card-body">
                                     <p class="pbtitle">Schedule</p>
                                   </div>
