adding project 1 link

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,12 +69,6 @@
                                     <p class="pbtitle">Drum Kit</p>
                                   </div>
                                 </div></a>
-                                <a href="https://tylermorrisford.github.io/dice-game/" target="_blank"><div class="card portbox" style="width: 207px;">
-                                  <img src="assets/dice.png" class="card-img-top" alt="...">
-                                  <div class="card-body">
-                                    <p class="pbtitle">Dice</p>
-                                  </div>
-                                </div></a>
                                 <a href="https://tylermorrisford.github.io/word-guess/" target="_blank"><div class="card portbox" style="width: 200px;">
                                   <img src="assets/deathstar.png" class="card-img-top" alt="...">
                                   <div class="card-body">
@@ -100,9 +94,15 @@
                                   </div>
                                 </div></a> 
                                 <a href="https://tylermorrisford.github.io/train-scheduler/" target="_blank"><div class="card portbox" style="width: 200px;">
-                                  <img src="https://media.giphy.com/media/13sc1Erq6rAoQU/giphy.gif" class="card-img-top" alt="trivia game">
+                                  <img src="https://media.giphy.com/media/13sc1Erq6rAoQU/giphy.gif" class="card-img-top" alt="train-scheduler">
                                   <div class="card-body">
                                     <p class="pbtitle">Schedule</p>
+                                  </div>
+                                </div></a> 
+                                <a href="https://tylermorrisford.github.io/Travel-Wizard/" target="_blank"><div class="card portbox" style="width: 200px;">
+                                  <img src="assets/world.png" class="card-img-top" alt="travel-wizard">
+                                  <div class="card-body">
+                                    <p class="pbtitle">Travel</p>
                                   </div>
                                 </div></a> 
                               </div>    
